--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lvamsavarthan.github.io",
-  "homepage": "http://lvamsavarthan.github.io/",
+  "homepage": "http://lvamsavarthan.github.io",
   "version": "2.1.5",
   "private": true,
   "dependencies": {
@@ -25,7 +25,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "deploy": "gh-pages -b master -d build",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
